--- a/week-1-exercise.ipynb
+++ b/week-1-exercise.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: The list is empty. Please provide a non-empty list.\n"
+      "The list has 3 elements.\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
     "    \n",
     "    \n",
     "try:\n",
-    "   how_many_elements([])     \n",
+    "   how_many_elements([3,5,7])     \n",
     "\n",
     "except ValueError as e:\n",
     "    print(f\"Error: {e}\")"
@@ -52,6 +52,13 @@
    "source": [
     "### Exercise 2:\n",
     "###### Write a function that receives a string as parameter and return the number of each character in it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution 1"
    ]
   },
   {
@@ -77,17 +84,17 @@
    ],
    "source": [
     "def funct(text):\n",
-    "    character_dictionary = {}\n",
+    "    character_dictionary = {}  #her bir karakterin sayısını saklamak için boş bir dictionary\n",
     "    \n",
-    "    for character in text:\n",
+    "    for character in text:        #girdi dizesindeki her karakter üzerinde döner ve sayıları dictionaryde günceller. \n",
     "        \n",
-    "        if character in character_dictionary:\n",
+    "        if character in character_dictionary:                \n",
     "            character_dictionary[character] += 1\n",
     "            \n",
     "        else:\n",
     "            character_dictionary[character] = 1\n",
     "            \n",
-    "    return character_dictionary\n",
+    "    return character_dictionary  #fonksiyon sayıları içeren dictionary i döndürür.\n",
     "            \n",
     "    \n",
     "    \n",
@@ -96,6 +103,49 @@
     "\n",
     "for x, y in result.items():\n",
     "    print(f\"'{x}' karakteri {y} kez geçiyor.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'z' karakteri 1 kez geçiyor.\n",
+      "'e' karakteri 2 kez geçiyor.\n",
+      "'k' karakteri 2 kez geçiyor.\n",
+      "'i' karakteri 1 kez geçiyor.\n",
+      "'y' karakteri 1 kez geçiyor.\n",
+      "' ' karakteri 1 kez geçiyor.\n",
+      "'a' karakteri 1 kez geçiyor.\n",
+      "'r' karakteri 1 kez geçiyor.\n",
+      "'t' karakteri 1 kez geçiyor.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter  # giriş dizesindeki her karakterin sayısını otomatik olarak sayan Counter sınıfı\n",
+    "\n",
+    "def funct(arr):                 #her benzersiz öğe için sayıları içeren bir dictionary benzeri bir nesneyi otomatik olarak başlatır\n",
+    "    character_numbers = Counter(arr)\n",
+    "    return character_numbers\n",
+    "\n",
+    "# Örnek kullanım:\n",
+    "input_str = \"zekiye kart\"\n",
+    "result = funct(input_str)\n",
+    "\n",
+    "for character, number in result.items():                   #Sonuç bir dictionary olarak döndürülür, burada anahtarlar character ve değerler ise numbers dır.\n",
+    "    print(f\"'{character}' karakteri {number} kez geçiyor.\")"
    ]
   },
   {
