--- a/week-1-exercise.ipynb
+++ b/week-1-exercise.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
     "# Örnek kullanım:\n",
     "input_str = \"zekiye kart\"\n",
     "result = funct(input_str)\n",
-    "\n",
+    "#print(result)\n",
     "for character, number in result.items():                   #Sonuç bir dictionary olarak döndürülür, burada anahtarlar character ve değerler ise numbers dır.\n",
     "    print(f\"'{character}' karakteri {number} kez geçiyor.\")"
    ]
