--- a/week-3-exercises/week-3-exercise.ipynb
+++ b/week-3-exercises/week-3-exercise.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Week 3\n",
+    "## Exercise:\n",
+    "- Join kaggle.com and choose a real-world dataset. (This is part of your homework, try to do some research on Kaggle.)\n",
+    "- Download the data of your choice.\n",
+    "- Practice data cleaning and preprocessing, handle missing values, outliers etc.\n",
+    "- Explore the basic statistics with pandas methods.\n",
+    "- Create visualizations to understand the distribution of variables.\n",
+    "- Identify correlations between variables using correlation matrices and/or heatmaps.\n",
+    "- Derive insights from your analysis. What interesting patterns or trends did you discover?\n",
+    "## Notes:\n",
+    "- The goal is to gain insights into the data and present your findings through meaningful visualizations.\n",
+    "- Document your analysis and include code comments to explain each step of the analysis.\n",
+    "- Create visualizations with clear labels and titles.\n",
+    "- Summarize your findings in a informative manner."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
