--- a/week-4-exercises/week-4-exercise.ipynb
+++ b/week-4-exercises/week-4-exercise.ipynb
@@ -5367,17 +5367,17 @@
     }
    ],
    "source": [
-    "# Hava durumu verilerini depolamak için bir sözlük oluşturun\n",
+    "# Hava durumu verilerini depolamak için bir sözlük\n",
     "weather_data_dict = {}\n",
     "\n",
-    "# Her büyük şehir için API isteği yapın ve verileri sözlüğe ekleyin\n",
+    "# Her büyük şehir için API isteği yapmak ve verileri sözlüğe eklemek\n",
     "for city_id in big_city_ids:\n",
     "    params = {'id': city_id, 'appid': api_key}\n",
     "    response = requests.get(endpoint, params=params)\n",
     "    weather_data = response.json()\n",
     "    weather_data_dict[city_id] = weather_data\n",
     "\n",
-    "# Şehirlerin hava durumu verilerini gösterin\n",
+    "# Şehirlerin hava durumu verilerini göster\n",
     "for city_id, data in weather_data_dict.items():\n",
     "    print(f\"\\nHava Durumu Bilgileri - Şehir ID: {city_id}\")\n",
     "    print(f\"Şehir: {data['name']}\")\n",
